--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,23 @@
-< !DOCTYPE html><html lang="en">
-<head>(<https: //cdnjs.com/libraries/modern-normalize>)
- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css" > < !-- Потім ваші стилі --><link rel="stylesheet" href="./css/styles.css" /> </head>
+body {background-color: #FFFFFF
+font-family: "Roboto", sans-serif ;
+color: #434455}
 
 
- .header {
-    background-color: #E7E9FC ;
-    border-bottom: 1px solid ;
-    Width : 1440px;
-    Height : 72px;
- }
-  .header nav a {
- Width Hug: 115px;
-  Height Fixed: 24px; 
-  Top: 24px;
-   Left: 156px;}
 
+.tatel {width: 218px 
+   height:40px 
+   top: 1868px
+   left: 611px
+   styleName: Header 2;
+      font-family: Roboto;
+      font-size: 36px;
+      font-weight: 700;
+      line-height: 40px;
+      letter-spacing: 0.02em;
+      text-align: center;
+      color: background: #2E2F42;
 
+}
 
 
 
