--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,16 @@
+head>< !-- Спочатку нормалізатор --><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
+< https: //fonts.gstatic.com>
+<link rel="stylesheet" href="./css/styles.css" />
+</head>
+
+
+
+https: //fonts.gstatic.com
+
+
+
+
+
 body {background-color: #FFFFFF
 font-family: "Roboto", sans-serif ;
 color: #434455}
