--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ https: //fonts.gstatic.com
 
 
 
-body {background-color: #FFFFFF
+body > {background-color: #FFFFFF
 font-family: "Roboto", sans-serif ;
 color: #434455}
 
