--- a/styles.css
+++ b/styles.css
@@ -1,48 +1,108 @@
-head>< !-- Спочатку нормалізатор --><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
-< https: //fonts.gstatic.com>
-<link rel="stylesheet" href="./css/styles.css" />
-</head>
 
 
+.WebStudio
+{font-family: Raleway;
+   font-size: 18px;
+   font-weight: 700;
+   line-height: 21px;
+   letter-spacing: 0.03em;
+   background: #9a9db500;
+   text-align: center ;
+list-style: none;}
 
-
-
-
-.body {background-color: #FFFFFF
-font-family: "Roboto", sans-serif ;
-color: #434455 ;
-width: 1128px ;
-height: 1000px ;
-top: 1868px ;
-left: 156px;
- border: 1px;
+.Studio{width: 71px;
+height: 21px;
+font-family: Raleway;
+font-size: 18px;
+font-weight: 700;
+line-height: 21px;
+letter-spacing: 0.03em;
+background: #f0f0f500;
+text-align: left;
+list-style: none;
+color: black;
 }
 
+.menu-heder { 
+   font-family: "Roboto", sans-serif;
+   Weight: 500; 
+   Size: 16px; 
+   Line: height 24px;
+   Letter 2%;font-weight: 500;
+   font-size: 16px;
+   line-height: 1.5;
+   letter-spacing: 0.02em;
+   color: #2e2f42;
+list-style: none; 
+}
 
-
-.tatel {width: 218px ;
-   height: 40px ;
-   top: 1868px;
-   left: 611px;
-   styleName: Header 2;
-      font-family: Roboto;
+.address-malito
+{font-family: "Roboto", sans-serif;
+font-weight: 400;
+   font-size: 16px;
+   line-height: 1.5;
+   letter-spacing: 0.02em;
+   color: #434455;
+list-style: none;
+}
+.address-tel {
+font-family: "Roboto", sans-serif;
+font-weight: 400;
+   font-size: 16px;
+   line-height: 1.5;
+   letter-spacing: 0.02em;
+   color: #434455;
+   list-style: none;
+}
+.Effective {
+   font-family: "Roboto", sans-serif;
+   font-weight: 700;
+   font-size: 56px;
+   line-height: 1.07143;
+   letter-spacing: 0.02em;
+   text-align: center;
+   color: #390c0c;
+}
+.button-Order-Service {
+   font-family: "Roboto", sans-serif;
+   font-weight: 500;
+      font-size: 16px;
+      line-height: 1.5;
+      letter-spacing: 0.04em;
+      color: #fff;
+}
+.spdt-ul {
+   list-style: none;
+}
+.spdt-spdt-p {
+   list-style: none;
+}
+.spdt {
+   font-family: "Roboto", sans-serif;
+   font-weight: 500;
+      font-size: 20px;
+      line-height: 1.2;
+      letter-spacing: 0.02em;
+      color: #2e2f42;
+      
+}
+.spdt-p {
+font-family: "Roboto", sans-serif;
+   font-weight: 400;
+      font-size: 16px;
+      line-height: 1.5;
+      letter-spacing: 0.02em;
+      color: #434455;
+}
+.Team {
+font-family: "Roboto", sans-serif;
+   font-weight: 700;
       font-size: 36px;
-      font-weight: 700;
-      line-height: 40px;
+      line-height: 1.11111;
       letter-spacing: 0.02em;
       text-align: center;
-      color: background: #2E2F42;
-
+      color: #2e2f42;
 }
-
-.section {width: 1128px height: 420px top: 1980px left: 156px border: 1px}
-
-
-
-
-
-
-
 
 
 
