--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,12 @@
    letter-spacing: 0.03em;
    background: #9a9db500;
    text-align: center ;
-list-style: none;}
+list-style: none; 
+display: flex;
+   align-items: center;
+   justify-content: flex-start;
+   flex-direction: row;
+   gap: 0px;}
 
 .Studio{width: 71px;
 height: 21px;
@@ -21,6 +26,11 @@ background: #f0f0f500;
 text-align: left;
 list-style: none;
 color: black;
+display: flex;
+   align-items: center;
+   justify-content: flex-start;
+   flex-direction: row;
+   gap: 0px;
 }
 
 .menu-heder { 
@@ -103,13 +113,64 @@ font-family: "Roboto", sans-serif;
       text-align: center;
       color: #2e2f42;
 }
+.Team-ul {
+   list-style: none;
+}
+.eam-li {
+list-style: none;
+}
 
-
-
-
-
-
-
+.Team-man {
+font-family: "Roboto", sans-serif;
+font-weight: 500;
+   font-size: 20px;
+   line-height: 1.2;
+   letter-spacing: 0.02em;
+   text-align: center;
+   color: #2e2f42;
+}
+.hu {
+   font-family: "Roboto", sans-serif;
+   font-weight: 400;
+      font-size: 16px;
+      line-height: 1.5;
+      letter-spacing: 0.02em;
+      text-align: center;
+      color: #434455;
+}
+.Our {
+   font-family: "Roboto", sans-serif;
+   font-weight: 700;
+      font-size: 36px;
+      line-height: 1.11111;
+      letter-spacing: 0.02em;
+      text-align: center;
+      color: #2e2f42;
+}
+.bcm {
+font-family: "Roboto", sans-serif;
+font-weight: 500;
+   font-size: 20px;
+   line-height: 1.2;
+   letter-spacing: 0.02em;
+   color: #2e2f42;
+}
+.amm {
+font-family: "Roboto", sans-serif;
+font-weight: 400;
+   font-size: 16px;
+   line-height: 1.5;
+   letter-spacing: 0.02em;
+   color: #434455;
+}
+.footer-p { 
+font-family: "Roboto", sans-serif;
+font-weight: 400;
+   font-size: 16px;
+   line-height: 1.5;
+   letter-spacing: 0.02em;
+   color: #f4f4fd;
+}
 
 
 
