--- a/styles.css
+++ b/styles.css
@@ -162,14 +162,27 @@ font-weight: 400;
    line-height: 1.5;
    letter-spacing: 0.02em;
    color: #434455;
+
 }
+.section-5-ul {
+list-style: none;
+}
+
+.section-5-li{
+list-style: none;
+}
+
+
+
+
+
 .footer-p { 
 font-family: "Roboto", sans-serif;
 font-weight: 400;
    font-size: 16px;
    line-height: 1.5;
    letter-spacing: 0.02em;
-   color: #f4f4fd;
+   color: #0909ee;
 }
 
 
