--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,12 @@
 
+.body {
+font-family: "Roboto", sans-serif;
+color: #434455
+background-color: #FFFFFF
 
+
+
+}
 .WebStudio
 {font-family: Raleway;
    font-size: 18px;
@@ -128,6 +135,8 @@ font-weight: 500;
    letter-spacing: 0.02em;
    text-align: center;
    color: #2e2f42;
+   line-height: 1.11
+
 }
 .hu {
    font-family: "Roboto", sans-serif;
@@ -137,6 +146,11 @@ font-weight: 500;
       letter-spacing: 0.02em;
       text-align: center;
       color: #434455;
+      text-transform: capitalize
+}
+.section-4{
+ text-transform: capitalize
+line-height: 1.11
 }
 .Our {
    font-family: "Roboto", sans-serif;
