--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 font-family: "Roboto", sans-serif;
 color: #434455
 background-color: #FFFFFF
-
+color: #434455 
 
 
 }
@@ -52,10 +52,13 @@ display: flex;
    color: #2e2f42;
 list-style: none; 
 }
+.address {
+ font-style: normal}
+
+
 
 .address-malito
-{font-family: "Roboto", sans-serif;
-font-weight: 400;
+{
    font-size: 16px;
    line-height: 1.5;
    letter-spacing: 0.02em;
@@ -149,7 +152,7 @@ font-weight: 500;
       text-transform: capitalize
 }
 .section-4{
- text-transform: capitalize
+text-transform: capitalize
 line-height: 1.11
 }
 .Our {
