--- a/styles.css
+++ b/styles.css
@@ -4,29 +4,29 @@ font-family: "Roboto", sans-serif;
 color: #434455
 background-color: #FFFFFF
 color: #434455 
-
-
 }
+
+
 .WebStudio
 {font-family: Raleway;
-   font-size: 18px;
-   font-weight: 700;
-   line-height: 21px;
-   letter-spacing: 0.03em;
-   background: #9a9db500;
-   text-align: center ;
+font-size: 18px;
+font-weight: 700;
+line-height: 21px;
+letter-spacing: 0.03em;
+background: #9a9db500;
+text-align: center ;
 list-style: none; 
 display: flex;
-   align-items: center;
-   justify-content: flex-start;
-   flex-direction: row;
-   gap: 0px;
+align-items: center;
+justify-content: flex-start;
+flex-direction: row;
+gap: 0px;
 font-weight: 700;
-   font-size: 18px;
-   line-height: 1.17;
-   letter-spacing: 0.03em;
-   text-transform: uppercase;
-   color: #4d5ae5;}
+font-size: 18px;
+line-height: 1.17;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+color: #4d5ae5;}
 
 .Studio{width: 71px;
 height: 21px;
@@ -40,96 +40,121 @@ text-align: left;
 list-style: none;
 color: black;
 display: flex;
-   align-items: center;
-   justify-content: flex-start;
-   flex-direction: row;
-   gap: 0px;
-   font-weight: 700;
-      font-size: 18px;
-      line-height: 1.17;
-      letter-spacing: 0.03em;
-      text-transform: uppercase;
-      color: #2e2f42;
+align-items: center;
+justify-content: flex-start;
+flex-direction: row;
+gap: 0px;
+font-weight: 700;
+font-size: 18px;
+line-height: 1.17;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+color: #2e2f42;
 }
 
+
+.header:hover,:focus  [ font-family: "Raleway",
+sans-serif
+color: #404bbf]
+
 .menu-heder { 
-   font-family: "Roboto", sans-serif;
-   Weight: 500; 
-   Size: 16px; 
-   Line: height 24px;
-   Letter 2%;font-weight: 500;
-   font-size: 16px;
-   line-height: 1.5;
-   letter-spacing: 0.02em;
-   color: #2e2f42;
+font-family: "Roboto", sans-serif;
+Weight: 500; 
+Size: 16px; 
+Line: height 24px;
+Letter 2%;font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #2e2f42;
 list-style: none; 
 }
+
+
 .address {
- font-style: normal}
+font-style: normal}
 
 
 
 .address-malito
 {
-   font-size: 16px;
-   line-height: 1.5;
-   letter-spacing: 0.02em;
-   color: #434455;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #434455;
 list-style: none;
 }
 .address-tel {
 font-family: "Roboto", sans-serif;
 font-weight: 400;
-   font-size: 16px;
-   line-height: 1.5;
-   letter-spacing: 0.02em;
-   color: #434455;
-   list-style: none;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #434455;
+list-style: none;
 }
-.Effective {
-   font-family: "Roboto", sans-serif;
-   font-weight: 700;
-   font-size: 56px;
-   line-height: 1.07143;
-   letter-spacing: 0.02em;
-   text-align: center;
-   color: #390c0c;
+
+
+.main-section{
+background-color: #2e2f42}
+
+
+
+
+
+
+
+.effective  {
+font-family: "Roboto", sans-serif;
+font-weight: 700;
+font-size: 56px;
+line-height: 1.07;
+letter-spacing: 0.02em;
+text-align: center;
+color: #390c0c;
 }
+
+
 .button-Order-Service {
-   font-family: "Roboto", sans-serif;
-   font-weight: 500;
-      font-size: 16px;
-      line-height: 1.5;
-      letter-spacing: 0.04em;
-      color: #fff;
+font-family: "Roboto", sans-serif;
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.04em;
+color: #fff;
 }
+
+
 .spdt-ul {
-   list-style: none;
+list-style: none;
 }
 .spdt-spdt-p {
-   list-style: none;
+list-style: none;
 }
 .spdt {
-   font-family: "Roboto", sans-serif;
-   font-weight: 500;
-      font-size: 20px;
-      line-height: 1.2;
-      letter-spacing: 0.02em;
-      color: #2e2f42;
-      
+font-family: "Roboto", sans-serif;
+font-weight: 500;
+font-size: 20px;
+line-height: 1.2;
+letter-spacing: 0.02em;
+color: #2e2f42;
+
 }
+
 .spdt-p {
 font-family: "Roboto", sans-serif;
-   font-weight: 400;
-      font-size: 16px;
-      line-height: 1.5;
-      letter-spacing: 0.02em;
-      color: #434455;
+font-weight: 400;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #434455;
 }
+
+
 .Team {
 font-family: "Roboto", sans-serif;
-   font-weight: 700;
-      font-size: 36px;
+font-weight: 700;
+font-size: 36px;
       line-height: 1.11111;
       letter-spacing: 0.02em;
       text-align: center;
