--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ color: #434455
 }
 
 
-.WebStudio
+.webStudio
 {font-family: Raleway;
 font-size: 18px;
 font-weight: 700;
@@ -28,7 +28,7 @@ letter-spacing: 0.03em;
 text-transform: uppercase;
 color: #4d5ae5;}
 
-.Studio{width: 71px;
+.studio{width: 71px;
 height: 21px;
 font-family: Raleway;
 font-size: 18px;
@@ -50,6 +50,12 @@ line-height: 1.17;
 letter-spacing: 0.03em;
 text-transform: uppercase;
 color: #2e2f42;
+font-weight: 700;
+font-size: 18px;
+line-height: 1.17;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+color: #f4f4fd;
 }
 
 
@@ -233,10 +239,10 @@ list-style: none;
 .footer-p { 
 font-family: "Roboto", sans-serif;
 font-weight: 400;
-   font-size: 16px;
-   line-height: 1.5;
-   letter-spacing: 0.02em;
-   color: #0909ee;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color:#F4F4FD;
 }
 
 
