--- a/styles.css
+++ b/styles.css
@@ -161,6 +161,10 @@ color: #434455;}
 
 .section-5-li {}
 
-.footer {}
+.footer {background: #2e2f42;}
 
-.footer-p {}
+.footer-p {font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;}
