--- a/styles.css
+++ b/styles.css
@@ -86,13 +86,18 @@ text-align: center;
 color: #fff;
 }
 
-.button-Order-Service {
+.button-order-service:hover,:focus{
+background-color: #404BBF
+cursor:pointer
+font-family: "Roboto", sans-serif
 font-weight: 500;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.04em;
 color: #fff;
+background-color: #4D5AE5
 }
+
 
 .section-2 {}
 
