--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@ line-height: 1.17;
 letter-spacing: 0.03em;
 text-transform: uppercase;
 color: #2e2f42;
+color: #f4f4fd
 }
 .menu-heder:hover,:focus{
 color; #404bbf
@@ -181,7 +182,10 @@ color: #434455;}
 .footer {background: #2e2f42;}
 
 .footer-p {font-weight: 400;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #f4f4fd;}
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #f4f4fd;
+color:#F4F4FD; 
+
+}
