--- a/styles.css
+++ b/styles.css
@@ -126,8 +126,8 @@ color: #434455;}
     font-size: 36px;
     line-height: 1.11;
     letter-spacing: 0.02em;
-    text-align: center;
-    color: #2e2f42;}
+    color: #2e2f42;
+text-align: center;}
 
 .team-ul {}
 
@@ -137,14 +137,12 @@ color: #434455;}
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
-    text-align: center;
     color: #2e2f42;}
 
 .hu {font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    text-align: center;
     color: #434455;}
 
 .section-4 {}
