--- a/styles.css
+++ b/styles.css
@@ -186,3 +186,22 @@ color: #f4f4fd;
 color:#F4F4FD; 
 
 }
+
+.webStudio-footer {
+    font-family: "Raleway", sans-serif font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4d5ae5;
+}
+
+.webStudio-footer {
+    font-family: "Raleway", sans-serif font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #2e2f42;
+    color: #f4f4fd
+}
