--- a/styles.css
+++ b/styles.css
@@ -197,7 +197,8 @@ color:#F4F4FD;
 }
 
 .webStudio-footer {
-    font-family: "Raleway", sans-serif font-weight: 700;
+    font-family: "Raleway", sans-serif 
+    font-weight: 700;
     font-size: 18px;
     line-height: 1.17;
     letter-spacing: 0.03em;
