--- a/styles.css
+++ b/styles.css
@@ -176,14 +176,7 @@ text-align: center;}
 
 .section-5-li {}
 
-.footer {background: #2e2f42;
-font-family: "Raleway", sans-serif font-weight: 700;
-    font-size: 18px;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: #4d5ae5;
-}
+.footer {background: #2e2f42;}
 
 .footer-p {font-weight: 400;
 font-size: 16px;
@@ -203,7 +196,7 @@ color:#F4F4FD;
     color: #4d5ae5;
 }
 
-span {
+.webStudio-footer {
     font-family: "Raleway", sans-serif 
     font-weight: 700;
     font-size: 18px;
