--- a/styles.css
+++ b/styles.css
@@ -176,7 +176,7 @@ text-align: center;}
 
 .section-5-li {}
 
-.footer {background: #2e2f42;}
+.foot {background: #2e2f42;}
 
 .footer-p {font-weight: 400;
 font-size: 16px;
