--- a/styles.css
+++ b/styles.css
@@ -190,16 +190,16 @@ color:#F4F4FD;
 
 }
 
-.webStudio-footer {
+.studio-footer {
     font-family: "Raleway", sans-serif font-weight: 700;
     font-weight: 700;
         font-size: 18px;
         line-height: 1.16667;
         letter-spacing: 0.03em;
-        text-transform: uppercase;
-        color: #2e2f42;}
+        text-transform: uppercase;;
+    color: #f4f4fd}
 
-.webStudio-footer {
+.webstudio-footer {
     font-family: "Raleway", sans-serif 
     font-weight: 700;
         font-size: 18px;
