--- a/styles.css
+++ b/styles.css
@@ -136,7 +136,7 @@ text-align: center;}
 
 .eam-li {}
 
-.Team-man {font-weight: 500;
+.team-man {font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
