--- a/styles.css
+++ b/styles.css
@@ -124,7 +124,7 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 color: #434455;}
 
-.section-3 {}
+.section-3 {background-color: #F4F4FD}
 
 .team {font-weight: 700;
     font-size: 36px;
