--- a/styles.css
+++ b/styles.css
@@ -154,9 +154,10 @@ text-transform: capitalize}
 
 .our {font-weight: 700;
     font-size: 36px;
-    line-height: 1.11111;
+    line-height: 1.11;
     letter-spacing: 0.02em;
     text-align: center;
+    text-transform: capitalize
     color: #2e2f42;}
 
 .our-ul {}
@@ -193,7 +194,7 @@ color:#F4F4FD;
 }
 
 .studio-footer {
-    font-family: "Raleway", sans-serif
+    font-family: "Raleway", sans-serif,
     font-weight 700;
         font-size: 18px;
         line-height: 1.17;
@@ -202,7 +203,7 @@ color:#F4F4FD;
     color: #f4f4fd}
 
 .webstudio-footer {
-    font-family: "Raleway", sans-serif 
+    font-family: "Raleway", sans-serif ,
     font-weight 700;
         font-size: 18px;
         line-height: 1.17;
