--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,8 @@ background-color: #FFFFFF }
 .header {}
 
 
-span {color: #2e2f42}
+span {
+color: #2e2f42}
 
 .nav-menu {}
 
@@ -14,7 +15,7 @@ span {color: #2e2f42}
 font-family: "Raleway", sans-serif
 font-weight: 700;
 font-size: 18px;
-line-height: 1.17;
+line-height \: 1.17;
 letter-spacing: 0.03em;
 text-transform: uppercase;
 color: #4d5ae5;
@@ -30,9 +31,11 @@ text-transform: uppercase;
 color: #2e2f42;
 color: #f4f4fd
 }
-.menu-heder:hover,:focus{
-color; #404bbf
+.menu-heder:hover 
+{
+color: #404bbf
 }
+.menu-heder:focus{color: #404bbf }
 
 
 .menu-heder {font-weight: 500;
