--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,13 @@
 body {
 font-family: "Roboto", sans-serif;
 color: #434455;
-background-color: #FFFFFF }
+background-color: #FFFFFF; }
 
 .header {}
 
 
 span {
-color: #2e2f42}
+color: #2e2f42;}
 
 .nav-menu {}
 
@@ -29,7 +29,7 @@ line-height: 1.17;
 letter-spacing: 0.03em;
 text-transform: uppercase;
 color: #2e2f42;
-color: #f4f4fd
+color: #f4f4fd;
 }
 .menu-heder:hover 
 {
@@ -130,10 +130,10 @@ color: #434455;}
 .section-3 {background-color: #F4F4FD}
 
 .team {font-weight: 700;
-    font-size: 36px;
-    line-height: 1.11;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
+font-size: 36px;
+line-height: 1.11;
+letter-spacing: 0.02em;
+color: #2e2f42;
 text-align: center;
 text-transform: capitalize}
 
@@ -142,42 +142,42 @@ text-transform: capitalize}
 .eam-li {background-color: #FFFFFF}
 
 .team-man {font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: #2e2f42;}
+font-size: 20px;
+line-height: 1.2;
+letter-spacing: 0.02em;
+color: #2e2f42;}
 
 .hu {font-weight: 400;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #434455;}
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #434455;}
 
 .section-4 {}
 
 .our {font-weight: 700;
-    font-size: 36px;
-    line-height: 1.11;
-    letter-spacing: 0.02em;
-    text-align: center;
-    text-transform: capitalize;
-    color: #2e2f42; }
+font-size: 36px;
+line-height: 1.11;
+letter-spacing: 0.02em;
+text-align: center;
+text-transform: capitalize;
+color: #2e2f42; }
 
 .our-ul {}
 
 .our-li {}
 
 .bcm {font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: #2e2f42;}
+font-size: 20px;
+line-height: 1.2;
+letter-spacing: 0.02em;
+color: #2e2f42;}
 
 .amm {font-weight: 400;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #434455;}
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #434455;}
 
 .section-5 {}
 
@@ -197,19 +197,19 @@ color:#F4F4FD;
 }
 
 .studio-footer {
-    font-family: "Raleway", sans-serif,
-    font-weight 700;
-        font-size: 18px;
-        line-height: 1.17;
-        letter-spacing: 0.03em;
-        text-transform: uppercase;;
-    color: #f4f4fd}
+font-family: "Raleway", sans-serif,
+font-weight 700;
+font-size: 18px;
+line-height: 1.17;
+letter-spacing: 0.03em;
+text-transform: uppercase;;
+color: #f4f4fd}
 
 .webstudio-footer {
-    font-family: "Raleway", sans-serif ,
-    font-weight 700;
-        font-size: 18px;
-        line-height: 1.17;
-        letter-spacing: 0.03em;
-        text-transform: uppercase;
-        color: #4d5ae5;}
+font-family: "Raleway", sans-serif ,
+font-weight 700;
+font-size: 18px;
+line-height: 1.17;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+color: #4d5ae5;}
