--- a/styles.css
+++ b/styles.css
@@ -114,6 +114,8 @@ background-color: #4D5AE5
     color: #ffffff;
     background-color: #4D5AE5}
 
+.button:hover{background-color: #404BBF}
+.button:focus{background-color: #404BBF}
 
 .section-2 {}
 
