--- a/styles.css
+++ b/styles.css
@@ -116,6 +116,14 @@ background-color: #4D5AE5
 
 .button:hover{background-color: #404BBF}
 .button:focus{background-color: #404BBF}
+.button-order-service:focus {
+    background-color: #404BBF
+}
+.button-order-service:hover {
+    background-color: #404BBF
+}
+
+
 
 .section-2 {}
 
