--- a/styles.css
+++ b/styles.css
@@ -230,4 +230,5 @@ font-size: 18px;
 line-height: 1.17;
 letter-spacing: 0.03em;
 text-transform: uppercase;
-color: #4d5ae5;}
+color: #4d5ae5;
+color: #2e2f42;}
