--- a/styles.css
+++ b/styles.css
@@ -116,12 +116,8 @@ background-color: #4D5AE5
 
 .button:hover{background-color: #404BBF}
 .button:focus{background-color: #404BBF}
-.button-order-service:focus {
-    background-color: #404BBF
-}
-.button-order-service:hover {
-    background-color: #404BBF
-}
+.button-order-service:
+.button-order-service:{}
 
 
 
@@ -230,5 +226,4 @@ font-size: 18px;
 line-height: 1.17;
 letter-spacing: 0.03em;
 text-transform: uppercase;
-color: #4d5ae5;
-color: #2e2f42;}
+color: #4d5ae5;}
