--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ letter-spacing: 0.03em;
 text-transform: uppercase;
 color: #4d5ae5;
 }
-
+.studio {color: #2e2f42;}
 .studio {
 font-family: "Raleway", sans-serif;
 font-weight: 700;
