--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,8 @@ text-transform: uppercase;
 color: #4d5ae5;
 }
 .studio {color: #2e2f42;}
+
+
 .studio {
 font-family: "Raleway", sans-serif;
 font-weight: 700;
@@ -28,7 +30,6 @@ font-size: 18px;
 line-height: 1.17;
 letter-spacing: 0.03em;
 text-transform: uppercase;
-color: #2e2f42;
 color: #f4f4fd;
 }
 .menu-heder:hover 
@@ -215,8 +216,9 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 color: #f4f4fd;
 color:#F4F4FD; 
-
 }
+
+.studio-footer {color: #2e2f42;}
 
 .studio-footer {
 font-family: "Raleway", sans-serif,
