--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ color: #4d5ae5;
 .studio span {color: #2e2f42;}
 
 
-.studio {
+.studio span {
 font-family: "Raleway", sans-serif;
 font-weight: 700;
 font-size: 18px;
@@ -31,6 +31,7 @@ line-height: 1.17;
 letter-spacing: 0.03em;
 text-transform: uppercase;
 color: #f4f4fd;
+color: #2e2f42;
 }
 .menu-heder:hover 
 {
