--- a/styles.css
+++ b/styles.css
@@ -222,7 +222,7 @@ color:#F4F4FD;
 .studio-footer {color: #2e2f42;}
 
 .studio-footer {
-font-family: "Raleway", sans-serif,
+font-family: "Raleway", sans-serif;
 font-weight: 700;
 font-size: 18px;
 line-height: 1.17;
