--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ color: #4d5ae5;
 .studio span {color: #2e2f42;}
 
 
-.studio span {
+.studio  {
 font-family: "Raleway", sans-serif;
 font-weight: 700;
 font-size: 18px;
