--- a/styles.css
+++ b/styles.css
@@ -172,7 +172,7 @@ line-height: 1.2;
 letter-spacing: 0.02em;
 color: #2e2f42;}
 
-.hup {font-weight: 400;
+.hup-p {font-weight: 400;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
