--- a/css/styles.css
+++ b/css/styles.css
@@ -152,7 +152,7 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 color: #434455;}
 
-.section-3 {background-color: #F4F4FD}
+.section-three {background-color: #F4F4FD}
 
 .team {font-weight: 700;
 font-size: 36px;
